# observable_unique_ptr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  oup.sublime-project
.github/workflows/: cmake.yml  doc.yml
cmake/: oup-config.cmake.in
doc/: dox.conf
include/oup/: observable_unique_ptr.hpp
tests/: CMakeLists.txt  boost_ut_fix.patch  catch2_and_overrides.hpp  compile_test_copy_assign.cpp  compile_test_copy_const.cpp  compile_test_good.cpp  compile_test_implicit_const_base_to_derived1.cpp  compile_test_implicit_const_base_to_derived2.cpp  compile_test_implicit_const_base_to_derived3.cpp  compile_test_observer_assign_raw.cpp  compile_test_observer_construct_raw.cpp  compile_test_sealed_assign_raw.cpp  compile_test_sealed_construct_raw.cpp  compile_test_sealed_release.cpp  compile_test_sealed_reset.cpp  memory_tracker.cpp  memory_tracker.hpp  runtime_tests.cpp  runtime_tests_lifetime.cpp  runtime_tests_make_observable.cpp  runtime_tests_observer_assignment.cpp  runtime_tests_observer_assignment_copy.cpp  runtime_tests_observer_assignment_from_owner.cpp  runtime_tests_observer_assignment_move.cpp  runtime_tests_observer_cast_copy.cpp  runtime_tests_observer_cast_move.cpp  runtime_tests_observer_comparison.cpp  runtime_tests_observer_construction.cpp  runtime_tests_observer_construction_copy.cpp  runtime_tests_observer_construction_from_owner.cpp  runtime_tests_observer_construction_move.cpp  runtime_tests_observer_from_this.cpp  runtime_tests_observer_misc.cpp  runtime_tests_owner_assignment.cpp  runtime_tests_owner_assignment_move.cpp  runtime_tests_owner_cast_move.cpp  runtime_tests_owner_comparison.cpp  runtime_tests_owner_construction.cpp  runtime_tests_owner_misc.cpp  size_benchmark.cpp  (+11 more)
tests/snatch/: snatch.hpp
